src/style.css
@import "tailwindcss";
@custom-variant dark (&:where(.dark, .dark *));

@layer base {

	dialog::backdrop {
		@apply backdrop-brightness-75;
	}

	dialog {
		@apply p-0;
		@apply font-sans text-base leading-normal tracking-normal antialiased transition-all;
		@apply shadow-xl shadow-neutral-900/10;
		@apply w-full mx-auto max-w-2xl transition-all overflow-hidden rounded-xl;
		@apply border border-neutral-200;
		@apply divide-y divide-neutral-200/80;
		@apply bg-neutral-50;
		@apply absolute mx-auto mt-[20vh];

		@apply dark:bg-neutral-900;
		@apply dark:text-neutral-300;
		@apply dark:border-neutral-800;
		@apply dark:divide-neutral-800;
		@apply dark:shadow-neutral-500/10;

		form {
			@apply flex flex-row justify-between items-center;
		}

		button[type="button"] {
			@apply pr-4
		}

		input[type="text"] {
			@apply text-2xl font-normal bg-transparent py-3 px-4 border-0 w-full placeholder:text-neutral-500 ;
			@apply dark:text-white rounded-tl-lg;
			@apply focus:outline-none;
		}
	}

	[name="footer"] {
		@apply flex justify-between text-sm py-2 px-4;
		@apply text-neutral-700 dark:text-neutral-400;
	}

	ul {
		@apply overflow-y-auto max-h-80;
		@apply first:mt-2 last:mb-2;
	}

	li {
		@apply flex cursor-default select-none items-center px-4 py-3.5 gap-4;
		@apply cursor-pointer mx-2;


		&.selected {
			@apply outline-none;
			@apply bg-neutral-200;
			@apply rounded-md;
		}

		&.selected.dark {
			@apply bg-neutral-800;
		}
	}

	li strong {
		@apply grow font-medium;
	}

	li strong small {
		@apply block text-sm font-normal text-neutral-500;
	}

	li svg,
	li img {
		@apply size-5;
	}

	kbd {
		@apply px-1.5 py-1 text-xs font-semibold rounded-md;
		@apply text-neutral-600 bg-neutral-100 border border-neutral-200;
		@apply dark:text-neutral-300 dark:bg-neutral-800 dark:border-neutral-700;
		@apply inline-flex items-baseline justify-center gap-0.5 leading-none;
	}
}

